2007-11-30  Gary Benson  <gbenson@redhat.com>

	* patches/icedtea-ports.patch
	(hotspot/src/share/vm/utilities/macros.hpp):
	Added PPC32_ONLY, NOT_PPC32, PPC64_ONLY and NOT_PPC64.

2007-11-30  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/cppInterpreter_ppc.cpp
	(generate_native_entry): Add support for UseMembar.

2007-11-30  Gary Benson  <gbenson@redhat.com>

	Fixes Bug #83
	* ports/hotspot/src/os_cpu/linux_ppc/vm/os_linux_ppc.cpp
	(JVM_handle_linux_signal): Handle segfaults when the memory
	serialization page is write protected.

2007-11-29  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am: Create symlinks to find jni header files.
	* Makefile.in: Regenerate.

2007-11-29  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/os_cpu/linux_ppc/vm/assembler_ppc.cpp
	(MacroAssembler::needs_explicit_null_check): Fix broken definition.

2007-11-23  Lillian Angel  <langel@redhat.com>
	
	Fixes Bug #80
	* README: Updated

2007-11-23  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/cpu/ppc/vm/c1_CodeStubs_ppc.cpp: New file.
	* ports/hotspot/src/cpu/ppc/vm/c1_Defs_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FpuStackSim_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FpuStackSim_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_FrameMap_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRAssembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LIRGenerator_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LinearScan_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_LinearScan_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_MacroAssembler_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_MacroAssembler_ppc.hpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_Runtime1_ppc.cpp: Likewise.
	* ports/hotspot/src/cpu/ppc/vm/c1_globals_ppc.hpp: Likewise.
